--- a/index.html
+++ b/index.html
@@ -1,8 +1,7 @@
 <html>
   <head><title>WhiteWoody.com</title></head>
   <body>
-    This is WhiteWoodyDotCom
-    <img src="YOUR_GOOGLE_DRIVE_SHAREABLE_LINK_HERE" alt="My Image">
+    <img src="https://drive.google.com/file/d/1gHhM-61sf1LfxibHfuJ2cGazb8B-30Fn/view?usp=drive_link" alt="White Woody">
   </body>
 </html>
 
