Moved image from google drive

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
   <head><title>WhiteWoody.com</title></head>
   <body>
-    <img src="https://drive.google.com/file/d/1gHhM-61sf1LfxibHfuJ2cGazb8B-30Fn/view?usp=drive_link" alt="White Woody">
+    <img src="whitewoody.jpg" alt="White Woody">
   </body>
 </html>
 
