Set width to 100

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
   <head><title>WhiteWoody.com</title></head>
   <body>
-    <img src="whitewoody.jpg" alt="White Woody">
+    <img src="whitewoody.jpg" alt="White Woody" style="width: 100%">
   </body>
 </html>
 
