--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
   <head><title>WhiteWoody.com</title></head>
   <body>
-    <img src="whitewoody.jpg" alt="White Woody" style="width: 100%">
+    <a href="https://www.instagram.com/whitewoodydotcom/"><img src="whitewoody.jpg" alt="White Woody" style="width: 100%"></a>
   </body>
 </html>
 
