added instagram logo

--- a/index.html
+++ b/index.html
@@ -1,7 +1,10 @@
 <html>
   <head><title>WhiteWoody.com</title></head>
   <body>
-    <a href="https://www.instagram.com/whitewoodydotcom/"><img src="whitewoody.jpg" alt="White Woody" style="width: 100%"></a>
+    <a href="https://www.instagram.com/whitewoodydotcom/">
+      <img src="whitewoody.jpg" alt="White Woody" style="width: 100%"><br/>
+      <img src="Instagram_icon.png" style="width: 20px"> @WhiteWoodyDotCom
+    </a>
   </body>
 </html>
 
