--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
   <head><title>WhiteWoody.com</title></head>
   <body>
-    <a href="https://www.instagram.com/whitewoodydotcom/">
+    <a href="https://www.instagram.com/whitewoodydotcom/" style="text-decoration: none">
       <img src="whitewoody.jpg" alt="White Woody" style="width: 100%"><br/>
       <img src="Instagram_icon.png" style="width: 20px"> @WhiteWoodyDotCom
     </a>
