fixed link style

--- a/index.html
+++ b/index.html
@@ -2,8 +2,12 @@
   <head><title>WhiteWoody.com</title></head>
   <body>
     <a href="https://www.instagram.com/whitewoodydotcom/" style="text-decoration: none">
-      <img src="whitewoody.jpg" alt="White Woody" style="width: 100%"><br/>
-      <img src="Instagram_icon.png" style="width: 20px"> @WhiteWoodyDotCom
+      <div>
+        <img src="whitewoody.jpg" alt="White Woody" style="width: 100%">
+      </div>
+      <div style="margin-top: 10px; width: 100%; text-align: center">
+        <img src="Instagram_icon.png" style="width: 20px"> @WhiteWoodyDotCom
+      </div>
     </a>
   </body>
 </html>
